Fix bug in InjectionRangeAction filtering
Signed-off-by: Vincent BOCHET <vincent.bochet@rte-france.com>